# minishell

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  fd_check.sh  grammar.md  leak_check.sh  minishell  test.c
includes/: minishell.h  ms_builtin.h  ms_env.h  ms_error.h  ms_exec.h  ms_expand.h  ms_minishell.h  ms_parser.h  ms_signal.h
includes_bonus/: ms_builtin_bonus.h  ms_env_bonus.h  ms_error_bonus.h  ms_exec_bonus.h  ms_expand_bonus.h  ms_minishell_bonus.h  ms_parser_bonus.h  ms_signal_bonus.h
jeongwpa/: BNF_Expression.md  BNF_IEEE.md  BNF_Minishell.md  External_Func.md
jiwojung/: FUNCTIONS.md  GRAMMAR.md  MAKE_OWN_SHELL.md  README.md  a.out  parst_tree.c  test.c
libft/: CMakeLists.txt  Makefile
libft/includes/: ft_bool.h  ft_printf.h  ft_type.h  get_next_line.h  libft.h
libft/srcs/: ft_atoi.c  ft_dprintf.c  ft_isalnum.c  ft_isalpha.c  ft_isdigit.c  ft_isnumeric.c  ft_lstadd_back.c  ft_lstadd_front.c  ft_lstclear.c  ft_lstdelone.c  ft_lstiter.c  ft_lstlast.c  ft_lstmap.c  ft_lstnew.c  ft_lstsize.c  ft_memcpy.c  ft_memmove.c  ft_memset.c  ft_printf.c  ft_split.c  ft_sprintf.c  ft_strchr.c  ft_strcmp.c  ft_strdup.c  ft_strjoin.c  ft_strlen.c  ft_strncmp.c  ft_strncpy.c  ft_strndup.c  ft_strrchr.c  ft_strsjoin.c  ft_strtrim.c  ft_substr.c  get_next_line.c  get_next_line_utils.c  pf_format.c  pf_handler.c  pf_parse_char.c  pf_parse_dec.c  pf_parse_hex.c  (+6 more)
srcs/: cd.c  clear.c  echo.c  init.c  init_clear.c  is_grammar.c  isgrammar.c  isgrammar2.c  isgrammar3.c  lex.c  lexer.c  minishell.c  ms_cd.c  ms_echo.c  ms_env.c  ms_env_utils.c  ms_env_utils2.c  ms_expand.c  ms_expand_qv.c  ms_expand_qv_utils.c  ms_pwd.c  parse.c  separate_line.c  terminal.c  terminal2.c  tokenize.c  tokenizer.c  unterminal.c  unterminal2.c
srcs/builtin/: ms_cd.c  ms_echo.c  ms_env.c  ms_env_exec.c  ms_exit.c  ms_export.c  ms_pwd.c  ms_unset.c
srcs/env/: ms_env_lst.c  ms_env_lst_utils.c  ms_env_serialize.c  ms_env_serialize_utils.c
srcs/error/: ms_error.c  ms_error_utils.c  ms_error_utils2.c  ms_error_utils3.c
srcs/exec/: ms_exec.c  ms_exec_collect_words.c  ms_exec_commands.c  ms_exec_commands_fork.c  ms_exec_dup_pipe.c  ms_exec_fd.c  ms_exec_heredoc.c  ms_exec_heredoc_before.c  ms_exec_init_clear.c  ms_exec_io_redirect.c  ms_exec_macro.c  ms_exec_macro2.c  ms_exec_op.c  ms_exec_open_close_pipe.c  ms_exec_path.c  ms_exec_path2.c  ms_exec_pipeline.c  ms_exec_redirect.c  ms_exec_unit.c  ms_exec_utils.c  ms_exec_utils2.c  ms_exec_words.c  ms_quote_removal.c  ms_quote_removal_dup.c  ms_words.c
srcs/expand/: ms_expand.c  ms_expand_aster.c  ms_expand_env.c  ms_expand_escape.c  ms_expand_filename.c  ms_expand_filename1.c  ms_expand_filename1_utils.c  ms_expand_filename2.c  ms_expand_filename3.c  ms_expand_filename3_utils.c  ms_expand_filename_expand.c  ms_expand_filename_expand_utils.c  ms_expand_filename_expansion.c  ms_expand_filename_expansion_utils.c  ms_expand_filename_match.c  ms_expand_filename_match1.c  ms_expand_filename_match2.c  ms_expand_filename_search.c  ms_expand_filename_utils.c  ms_expand_filenames.c  ms_expand_glob.c  ms_expand_glob1.c  ms_expand_glob2.c  ms_expand_glob3.c  ms_expand_lst.c  ms_expand_param.c  ms_expand_param_utils.c  ms_expand_param_utils2.c  ms_expand_queue.c  ms_expand_queue2.c  ms_expand_quote.c  ms_expand_qv.c  ms_expand_qv_utils.c  ms_expand_tilde.c  ms_expand_utils.c  ms_expand_wildcard.c  ms_expand_wildcard_dir.c  ms_expand_wildcard_utils.c  ms_glob.c  ms_glob_utils.c  (+4 more)
srcs/parser/: init.c  lexer2.c  ms_clear.c  ms_init.c  ms_lexer.c  ms_lexer2.c  ms_minishell.c  ms_parser.c  ms_parser2.c  ms_parser_error_handler.c  ms_terminal.c  ms_terminal2.c  ms_tokenizer.c  ms_tokenizer2.c  ms_unterminal.c  ms_unterminal2.c  parser.c  terminal2.c  unterminal2.c
srcs/signal/: ms_signal_fork.c  ms_signal_heredoc.c  ms_signal_prompt.c  ms_signal_utils.c
srcs_bonus/: minishell_bonus.c
srcs_bonus/builtin/: ms_cd_bonus.c  ms_echo_bonus.c  ms_env_bonus.c  ms_env_exec_bonus.c  ms_exit_bonus.c  ms_export_bonus.c  ms_pwd_bonus.c  ms_unset_bonus.c
srcs_bonus/env/: ms_env_lst_bonus.c  ms_env_lst_utils_bonus.c  ms_env_serialize_bonus.c  ms_env_serialize_utils_bonus.c
srcs_bonus/error/: ms_error_bonus.c  ms_error_utils2_bonus.c  ms_error_utils3_bonus.c  ms_error_utils_bonus.c
srcs_bonus/exec/: ms_exec_bonus.c  ms_exec_commands_bonus.c  ms_exec_commands_fork_bonus.c  ms_exec_dup_pipe_bonus.c  ms_exec_fd_bonus.c  ms_exec_heredoc_before_bonus.c  ms_exec_heredoc_bonus.c  ms_exec_init_clear_bonus.c  ms_exec_io_redirect_bonus.c  ms_exec_macro2_bonus.c  ms_exec_macro_bonus.c  ms_exec_open_close_pipe_bonus.c  ms_exec_path2_bonus.c  ms_exec_path_bonus.c  ms_exec_utils2_bonus.c  ms_exec_utils_bonus.c  ms_exec_words_bonus.c  ms_quote_removal_dup_bonus.c
srcs_bonus/expand/: ms_expand_bonus.c  ms_expand_filename_bonus.c  ms_expand_filename_expand_bonus.c  ms_expand_filename_match1_bonus.c  ms_expand_filename_match2_bonus.c  ms_expand_filename_search_bonus.c  ms_expand_filename_utils_bonus.c  ms_expand_filenames_bonus.c  ms_expand_param_bonus.c  ms_expand_param_utils2_bonus.c  ms_expand_param_utils_bonus.c  ms_glob_bonus.c  ms_glob_utils_bonus.c  ms_queue_bonus.c  ms_queue_utils_bonus.c
srcs_bonus/parser/: ms_clear_bonus.c  ms_lexer_bonus.c  ms_parser2_bonus.c  ms_parser_bonus.c  ms_parser_error_handler_bonus.c  ms_terminal_bonus.c  ms_tokenizer2_bonus.c  ms_tokenizer_bonus.c  ms_unterminal2_bonus.c  ms_unterminal_bonus.c
srcs_bonus/signal/: ms_signal_heredoc_bonus.c  ms_signal_prompt_bonus.c  ms_signal_utils_bonus.c
test/: CMakeLists.txt  cd_test.cpp  echo_test.cpp  env_test.cpp  error_test.cpp  exit_test.cpp  expand_dquote_test.cpp  expand_env_test.cpp  expand_escape_test.cpp  expand_filename_test.cpp  expand_param_test.cpp  expand_quote_test.cpp  expand_qv_test.cpp  expand_test.cpp  expand_tilde_test.cpp  expand_wildcard.cpp  export_test.cpp  ft_memmove_test.cpp  ft_strcmp_test.cpp  main.cpp  minishell_test.cpp  pwd_test.cpp  unset_test.cpp
